# axiom-fact

./: .gitignore  .pre-commit-config.yaml  README.md  benchmark.py  docker-build-conda.sh  docker-build.sh  docker-compose-conda.yaml  docker-compose.yaml  download-models.sh  environment-macos.yaml  environment.yaml  evaluate.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run_locally.py
app/: __init__.py  run_locally.py
app/alignscore/: __init__.py  alignscore.py  inference.py  model.py
app/api/: config.py  main.py  request_model.py  response_model.py
app/api/logging/: logger.py
docker/: Dockerfile  Dockerfile.conda
training/: baselines.py
